force-app/main/default/objects/TransactionLine__c/TransactionLine__c.object-meta.xml
<CustomObject>
    <description>PacPoint-CL051618 - Created for phase1</description>
    <label>Transaction Line</label>
    <nameField>
        <displayFormat>TL-{0000}</displayFormat>
        <label>Transaction Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>