force-app/main/default/objects/TransactionLine__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT070418 - Created for phase 1</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchased Cashier Codes</relationshipLabel>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>