force-app/main/default/objects/TransactionLine__c/fields/AmountCollected__c.field-meta.xml
<CustomField>
    <fullName>AmountCollected__c</fullName>
    <label>Amount Collected</label>
    <summarizedField>CollectionsAllocation__c.AmountAllocated__c</summarizedField>
    <summaryForeignKey>CollectionsAllocation__c.TransactionLine__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>