force-app/main/default/objects/TransactionLine__c/fields/AmountOutstanding__c.field-meta.xml
<CustomField>
    <fullName>AmountOutstanding__c</fullName>
    <formula>Amount__c - AmountCollected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>