force-app/main/default/objects/TransactionLine__c/fields/AmountOverride__c.field-meta.xml
<CustomField>
    <fullName>AmountOverride__c</fullName>
    <label>Amount Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>