force-app/main/default/objects/TransactionLine__c/fields/BoardProgram__c.field-meta.xml
<CustomField>
    <fullName>BoardProgram__c</fullName>
    <description>PacPoint-IC071719- Created for Phase 2</description>
    <formula>CashierCode__r.BoardProgram__r.Name</formula>
    <label>Board/Program</label>
    <type>Text</type>
</CustomField>