force-app/main/default/objects/TransactionLine__c/fields/breg_Agent_Search_List__c.field-meta.xml
<CustomField>
    <fullName>breg_Agent_Search_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Search List</label>
    <referenceTo>breg_Agent_Search_List__c</referenceTo>
    <relationshipLabel>Transaction Lines</relationshipLabel>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>