force-app/main/default/objects/TransactionLine__c/fields/breg_Delivery_Contact__c.field-meta.xml
<CustomField>
    <fullName>breg_Delivery_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transaction Lines</relationshipLabel>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>