force-app/main/default/objects/TransactionLine__c/fields/breg_Document__c.field-meta.xml
<CustomField>
    <fullName>breg_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document</label>
    <referenceTo>breg_Document__c</referenceTo>
    <relationshipLabel>Transaction Lines</relationshipLabel>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>