force-app/main/default/objects/TransactionLine__c/fields/breg_Entity__c.field-meta.xml
<CustomField>
    <fullName>breg_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-4018</description>
    <label>Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transaction Lines (Entity)</relationshipLabel>
    <relationshipName>breg_Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>