force-app/main/default/objects/TransactionLine__c/fields/breg_External_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_External_ID__c</fullName>
    <description>Aalta BREG-3923</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>