force-app/main/default/objects/TransactionLine__c/fields/breg_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Payment_Date__c</fullName>
    <description>Aalta BREG-4059</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>