force-app/main/default/objects/TransactionLine__c/fields/breg_Quantity__c.field-meta.xml
<CustomField>
    <fullName>breg_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>