force-app/main/default/objects/TransactionLine__c/fields/breg_Refund_Case__c.field-meta.xml
<CustomField>
    <fullName>breg_Refund_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>BREG Refund Request Case</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Transaction Lines (Refund Case)</relationshipLabel>
    <relationshipName>Refund_Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>