force-app/main/default/objects/TransactionLine__c/fields/breg_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NBR Form</fullName>
            </value>
            <value>
                <fullName>TNTMSM Form</fullName>
            </value>
            <value>
                <fullName>Change Form</fullName>
            </value>
            <value>
                <fullName>Annual Form</fullName>
            </value>
            <value>
                <fullName>Name Reservation Form</fullName>
            </value>
            <value>
                <fullName>CRA Registration Form</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Entity List</fullName>
            </value>
            <value>
                <fullName>Agent Search List</fullName>
            </value>
            <value>
                <fullName>Notification</fullName>
            </value>
            <value>
                <fullName>Withdrawal Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>