force-app/main/default/objects/TransactionLine__c/fields/CashierCode__c.field-meta.xml
<CustomField>
    <fullName>CashierCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-CL051618 - Created for phase 1</description>
    <label>Cashier Code</label>
    <referenceTo>CashierCode__c</referenceTo>
    <relationshipLabel>Transaction Lines</relationshipLabel>
    <relationshipName>TransactionLines</relationshipName>
    <type>Lookup</type>
</CustomField>