force-app/main/default/objects/TransactionLine__c/fields/CashierCodeCode__c.field-meta.xml
<CustomField>
    <fullName>CashierCodeCode__c</fullName>
    <description>PacPoint-FT060118 - Created for phase 1</description>
    <formula>CashierCode__r.CashierCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cashier Code Code</label>
    <type>Text</type>
</CustomField>