force-app/main/default/objects/TransactionLine__c/fields/CashierCodeDescription__c.field-meta.xml
<CustomField>
    <fullName>CashierCodeDescription__c</fullName>
    <description>PacPoint-FT060118 - Created for phase 1</description>
    <formula>CashierCode__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cashier Code Description</label>
    <type>Text</type>
</CustomField>