force-app/main/default/objects/TransactionLine__c/fields/CashierCodeFromSource__c.field-meta.xml
<CustomField>
    <fullName>CashierCodeFromSource__c</fullName>
    <description>Cashier Code sent via MicroPac</description>
    <label>Cashier Code From Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>