force-app/main/default/objects/TransactionLine__c/fields/CashierCodeName__c.field-meta.xml
<CustomField>
    <fullName>CashierCodeName__c</fullName>
    <description>PacPoint-IC021419- Created for phase 1</description>
    <formula>CashierCode__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CashierCodeName</label>
    <type>Text</type>
</CustomField>