force-app/main/default/objects/TransactionLine__c/fields/CashierCodeNameText__c.field-meta.xml
<CustomField>
    <fullName>CashierCodeNameText__c</fullName>
    <description>Used to display the cashier code name in generated PDF.</description>
    <label>Cashier Code Name Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>