force-app/main/default/objects/TransactionLine__c/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <description>PacPoint-AC112219 - Created for Payment Collection Support
(This was created for use on an SEC Batch Summary report)</description>
    <formula>Payment__r.pymt__Check_Number__c</formula>
    <label>Check Number</label>
    <type>Text</type>
</CustomField>