force-app/main/default/objects/TransactionLine__c/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <formula>CashierCode__r.CostCenter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Center</label>
    <type>Text</type>
</CustomField>