force-app/main/default/objects/TransactionLine__c/fields/CurrentDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentDate__c</fullName>
    <description>PacPoint-FT090218 - Created for phase 1</description>
    <formula>Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Date</label>
    <type>Date</type>
</CustomField>