force-app/main/default/objects/TransactionLine__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>PacPoint-CL051618 - Created for phase 1</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>