force-app/main/default/objects/TransactionLine__c/fields/ExternalTransactionLineID__c.field-meta.xml
<CustomField>
    <fullName>ExternalTransactionLineID__c</fullName>
    <label>External Transaction Line ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>