force-app/main/default/objects/TransactionLine__c/fields/FAMISSrcCode__c.field-meta.xml
<CustomField>
    <fullName>FAMISSrcCode__c</fullName>
    <formula>CashierCode__r.FAMISSrcCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FAMIS Src Code</label>
    <type>Text</type>
</CustomField>