force-app/main/default/objects/TransactionLine__c/fields/FundAccount__c.field-meta.xml
<CustomField>
    <fullName>FundAccount__c</fullName>
    <formula>CashierCode__r.FundAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Account</label>
    <type>Text</type>
</CustomField>