force-app/main/default/objects/TransactionLine__c/fields/IneligibleorRejected__c.field-meta.xml
<CustomField>
    <fullName>IneligibleorRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC010919- Created for Phase 1</description>
    <label>Ineligible or Rejected</label>
    <type>Checkbox</type>
</CustomField>