force-app/main/default/objects/TransactionLine__c/fields/License_Numbers__c.field-meta.xml
<CustomField>
    <fullName>License_Numbers__c</fullName>
    <label>License Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>