force-app/main/default/objects/TransactionLine__c/fields/LicenseRegistration__c.field-meta.xml
<CustomField>
    <fullName>LicenseRegistration__c</fullName>
    <description>PacPoint-FT060818 - Created for phase 1</description>
    <label>License / Registration #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>