force-app/main/default/objects/TransactionLine__c/fields/NoFeeRequired__c.field-meta.xml
<CustomField>
    <fullName>NoFeeRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC010919- Created for Phase 1</description>
    <label>No Fee Required</label>
    <type>Checkbox</type>
</CustomField>