force-app/main/default/objects/TransactionLine__c/fields/OtherRefundReason__c.field-meta.xml
<CustomField>
    <fullName>OtherRefundReason__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC010919- Created for Phase 1</description>
    <label>Other</label>
    <type>Checkbox</type>
</CustomField>