force-app/main/default/objects/TransactionLine__c/fields/OtherRefundReasonText__c.field-meta.xml
<CustomField>
    <fullName>OtherRefundReasonText__c</fullName>
    <description>PacPoint-IC010919- Created for Phase 1</description>
    <label>Other (Refund Reason)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>