force-app/main/default/objects/TransactionLine__c/fields/PaidStatus__c.field-meta.xml
<CustomField>
    <fullName>PaidStatus__c</fullName>
    <description>PacPoint-FT082718 - Created for phase 1</description>
    <label>Paid Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BCF</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>