force-app/main/default/objects/TransactionLine__c/fields/Partial_Payment_Apply__c.field-meta.xml
<CustomField>
    <fullName>Partial_Payment_Apply__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to be checked when allocating which transaction line should be associated with the payment</description>
    <label>Partial Payment Apply</label>
    <type>Checkbox</type>
</CustomField>