force-app/main/default/objects/TransactionLine__c/fields/PartialRefundApply__c.field-meta.xml
<CustomField>
    <fullName>PartialRefundApply__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to be checked when a partial refund should be prioritised to this transaction line. Prioritised lines are allocated first (FIFO) when a refund payment cannot cover all requested-refund lines.</description>
    <label>Partial Refund Apply</label>
    <type>Checkbox</type>
</CustomField>