force-app/main/default/objects/TransactionLine__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT082718 - Created for phase 1</description>
    <label>Payment</label>
    <referenceTo>pymt__PaymentX__c</referenceTo>
    <relationshipLabel>Transaction Lines</relationshipLabel>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>