force-app/main/default/objects/TransactionLine__c/fields/RefundAmount__c.field-meta.xml
<CustomField>
    <fullName>RefundAmount__c</fullName>
    <description>PacPoint-FT090218 - Created for phase 1</description>
    <label>Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>