force-app/main/default/objects/TransactionLine__c/fields/RefundDate__c.field-meta.xml
<CustomField>
    <fullName>RefundDate__c</fullName>
    <description>PacPoint-FT090118 - Created for phase 1</description>
    <label>Refund Date</label>
    <type>Date</type>
</CustomField>