force-app/main/default/objects/TransactionLine__c/fields/RefundedAmount__c.field-meta.xml
<CustomField>
    <fullName>RefundedAmount__c</fullName>
    <description>PacPoint-FT082818 - Created for phase 1</description>
    <formula>IF(OR(RequestRefund__c = TRUE, ISPICKVAL( PaidStatus__c , &quot;Refunded&quot;)) ,  Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refunded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>