force-app/main/default/objects/TransactionLine__c/fields/RefundReqDate__c.field-meta.xml
<CustomField>
    <fullName>RefundReqDate__c</fullName>
    <description>PacPoint - IC0100218 - Created for Phase 1</description>
    <label>Refund Req Date</label>
    <type>Date</type>
</CustomField>