force-app/main/default/objects/TransactionLine__c/fields/RequestRefund__c.field-meta.xml
<CustomField>
    <fullName>RequestRefund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT082718 - Created for phase 1</description>
    <label>Request Refund</label>
    <type>Checkbox</type>
</CustomField>