force-app/main/default/objects/TransactionLine__c/fields/Sort_By__c.field-meta.xml
<CustomField>
    <fullName>Sort_By__c</fullName>
    <description>Used to deal with the sorting when the Partial Payment Checkbox is checked, it will be prioritised</description>
    <formula>If(Partial_Payment_Apply__c, &apos;0&apos;, &apos;1&apos;) + Name</formula>
    <label>Sort By</label>
    <type>Text</type>
</CustomField>