force-app/main/default/objects/TransactionLine__c/fields/TrustAccount__c.field-meta.xml
<CustomField>
    <fullName>TrustAccount__c</fullName>
    <formula>CashierCode__r.TrustAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field indicates if the Cashier Code is a Trust Account.</inlineHelpText>
    <label>Trust Account</label>
    <type>Checkbox</type>
</CustomField>