force-app/main/default/objects/TransactionLine__c/fields/WorkitemID__c.field-meta.xml
<CustomField>
    <fullName>WorkitemID__c</fullName>
    <description>PacPoint-FT082218 - Created for phase 1

To be used by BREG to associate to records scanned into BRIMS</description>
    <label>Workitem ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>