force-app/main/default/objects/TransactionLine__c/validationRules/Prevent_Refunds_on_NonPaid_Lines.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Refunds_on_NonPaid_Lines</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL( PaidStatus__c ,&quot;Paid&quot;))  &amp;&amp;  RequestRefund__c  = TRUE</errorConditionFormula>
    <errorDisplayField>RequestRefund__c</errorDisplayField>
    <errorMessage>You can only Request a Refund on a Transaction Line that has been Paid</errorMessage>
</ValidationRule>