force-app/main/default/objects/TransactionLine__c/validationRules/PreventAmtUpdateforPaidTL.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventAmtUpdateforPaidTL</fullName>
    <active>true</active>
    <description>Prevent users from updating transaction line amount when the status is already at paid</description>
    <errorConditionFormula>ISPICKVAL( PaidStatus__c ,&quot;Paid&quot;) &amp;&amp;  ISCHANGED( Amount__c )</errorConditionFormula>
    <errorMessage>You can not edit the amount for this transaction line because it is already paid.</errorMessage>
</ValidationRule>