force-app/main/default/objects/TransactionLine__c/validationRules/RequireAReasonIfRefund.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireAReasonIfRefund</fullName>
    <active>true</active>
    <description>PacPoint-IC010919- Created for Phase 1</description>
    <errorConditionFormula>AND(RequestRefund__c  ,NOT(OR( Overpayment__c , NoFeeRequired__c , Withdrawal__c ,  IneligibleorRejected__c ,  OtherRefundReason__c )))</errorConditionFormula>
    <errorMessage>Please check at least one Reason for Refund.</errorMessage>
</ValidationRule>