force-app/main/default/objects/TransactionLine__c/listViews/All_Transaction_Lines.listView-meta.xml
<ListView>
    <fullName>All_Transaction_Lines</fullName>
    <columns>Transaction__c</columns>
    <columns>Account__c</columns>
    <columns>CashierCode__c</columns>
    <columns>Amount__c</columns>
    <columns>WorkitemID__c</columns>
    <columns>PaidStatus__c</columns>
    <columns>Division__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Haley Kahealani Peterson</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/3/2026 12:00 AM</value>
    </filters>
    <label>All Transaction Lines</label>
</ListView>