force-app/main/default/objects/TransactionLine__c/listViews/My_Transaction_Lines.listView-meta.xml
<ListView>
    <fullName>My_Transaction_Lines</fullName>
    <columns>NAME</columns>
    <columns>Transaction__c</columns>
    <columns>Account__c</columns>
    <columns>CashierCode__c</columns>
    <columns>Amount__c</columns>
    <columns>PaidStatus__c</columns>
    <columns>Division__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Transaction Lines</label>
</ListView>